--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,13 @@
   background-color: #f2f2f2;
   border: 1px solid #cbcbcb;
 }
+
+.widgets {
+  display: flex;
+  justify-content: flex-start;
+  margin: 20px;
+}
+
+.widget {
+  margin-right: 100px;
+}
